Render correctly linebreaks (#108)
* Update CSS to show properly the line breaks

* Add styles to properly render line breaks on Todos

--- a/webapp/src/components/sidebar_right/sidebar_right.scss
+++ b/webapp/src/components/sidebar_right/sidebar_right.scss
@@ -47,6 +47,88 @@
         color: var(--link-color);
         padding-left: 5px;
     }
+    .todo-text {
+        padding: 0 0 0.2em;
+        width: 100%;
+        word-wrap: break-word;
+
+        p {
+            font-size: 13.5px;
+            line-height: 1.6em;
+            margin: 0;
+            white-space: pre-wrap;
+            width: 100%;
+            word-break: break-word;
+        }
+
+        p + p {
+            margin: 0.5em 0 0;
+        }
+
+        ul,
+        ol {
+            font-size: 13.5px;
+
+            p {
+                margin-bottom: 0;
+            }
+
+            li {
+                p {
+                    display: inline;
+                }
+
+                ul {
+                    font-size: 1em;
+                    margin: 0;
+                    padding: 0 0 0 20px;
+                }
+            }
+
+            li.list-item--task-list ul,
+            li.list-item--task-list ol {
+                margin-left: 20px;
+            }
+
+            li.list-item--task-list ul {
+                padding-left: 0;
+            }
+
+            li:not(.list-item--task-list) li.list-item--task-list,
+            li:not(.list-item--task-list) li.list-item--task-list ~ li {
+                margin-left: -20px;
+            }
+
+            li input[type='checkbox']:disabled {
+                cursor: default;
+                vertical-align: top;
+            }
+        }
+
+        ul li.list-item--task-list,
+        ul li.list-item--task-list ~ li {
+            list-style-type: none;
+        }
+
+        ul li.list-item--task-list ~ li:not(.list-item--task-list) {
+            text-indent: 3px;
+
+            &:before {
+                content: '\2022';
+                margin-right: 8px;
+            }
+        }
+
+        ul + p,
+        ol + p {
+            margin-top: .6em;
+        }
+
+        p + ul,
+        p + ol {
+            margin-top: .6em;
+        }
+    }
 }
 .post__content {
     .todo-post {
